--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ a:visited {
 }
 
 #header {
-    margin: 3vh auto;
-    width: 60vw;
+    margin: 2vh auto;
+    width:45vw;
     padding: 2vh;
     position: relative;
     z-index: 5;
@@ -62,7 +62,7 @@ a:visited {
 #header h2,
 #header p {
     margin: 0;
-    padding: 2vh 2vw;
+    padding: 1vh 1vw;
     text-align: center;
 }
 
@@ -106,13 +106,13 @@ a:visited {
 }
 
 .lefty {
-    width: 33vw;
+    width: 20vw; /* Reduced from 33vw */
     margin-left: 5vw;
 }
 
 .righty {
-    width: 33vw;
-    margin-left: 62vw;
+    width: 20vw; /* Reduced from 33vw */
+    margin-left: 75vw; /* Adjusted to maintain alignment */
 }
 
 .fully {
@@ -263,12 +263,16 @@ a:visited {
         margin-top: 25px;
     }
 
-    .centered,
-    .lefty,
-    .righty,
+     .centered,
     .fully {
         width: 90vw;
         margin: 0 auto;
+    }
+
+    .lefty,
+    .righty {
+        width: 80%; /* Adjusted for smaller screens */
+        margin: 0 auto; /* Centered for better alignment on mobile */
     }
 }
 
