--- a/styles.css
+++ b/styles.css
@@ -101,9 +101,10 @@ a:visited {
 }
 
 .centered {
-    width: 50vw;
+    width: 20vw;
     margin: 0 auto;
 }
+
 
 .lefty {
     width: 20vw; /* Reduced from 33vw */
@@ -194,7 +195,7 @@ a:visited {
 }
 
 .legend div {
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 .legend div #block {
