--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ a:visited {
     height: 100vh;
     width: 100vw;
     position: fixed;
+    opacity: 0.7;
 }
 
 #mapInset {
@@ -25,7 +26,7 @@ a:visited {
     max-width: 100%;
     position: fixed;
     z-index: 1;
-    opacity: 1;
+    opacity: 0.5;
     border: 1px solid rgb(100, 100, 100);
     transition: opacity 0.5s ease-in-out;
     pointer-events: none;
@@ -64,6 +65,7 @@ a:visited {
     margin: 0;
     padding: 1vh 1vw;
     text-align: center;
+    color: white;
 }
 
 #footer {
@@ -239,6 +241,7 @@ a:visited {
         font-family: 'Roboto', 'Open Sans', 'Verdana', sans-serif;
         font-size: 1.9rem;
         text-transform: uppercase;
+        color: white;
     }
 
     .lefty {
